Issue not really fixed, but don't overflow #68

--- a/src/frontend/src/app/home-page/popups/popups.component.css
+++ b/src/frontend/src/app/home-page/popups/popups.component.css
@@ -68,6 +68,4 @@
 .popup-content{
   height: 90%;
   width: 100%;
-
-  background-color: red;
 }
